# PuntoDeVenta

./: .gitignore  manage.py  pyproject.toml
interfaz/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
interfaz/migrations/: 0001_initial.py  0002_order.py  0003_client_provider_remove_order_user_order_quantity_and_more.py
interfaz/services/: auth_service.py
interfaz/templates/interfaz/: clients.html  home.html  index.html  login.html
interfaz/utils/: enctyption_utils.py
puntodeventa/: asgi.py  settings.py  urls.py  wsgi.py
